# docs/swagger.yaml
@@ -197,28 +197,34 @@ definitions:
       data:
         $ref: '#/definitions/domain.Summary'
     type: object
+  v1.CampaignData:
+    properties:
+      data:
+        $ref: '#/definitions/domain.Campaign'
+    type: object
+  v1.CampaignListData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.Campaign'
+        type: array
+    type: object
   v1.CampaignResponse:
     properties:
       data:
-        properties:
-          data:
-            $ref: '#/definitions/domain.Campaign'
-        type: object
+        $ref: '#/definitions/v1.CampaignData'
     type: object
   v1.CampaignsListResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.Campaign'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.CampaignListData'
     type: object
   v1.CreateCampaignRequest:
     properties:
       name:
         type: string
+    required:
+    - name
     type: object
   v1.CreateLinkRequest:
     properties:
@@ -230,40 +236,60 @@ definitions:
     required:
     - target_url
     type: object
+  v1.CreatedUserResponse:
+    properties:
+      data:
+        $ref: '#/definitions/domain.User'
+    type: object
+  v1.GeoData:
+    properties:
+      data: {}
+    type: object
   v1.GeoResponse:
     properties:
       data:
-        properties:
-          data: {}
-        type: object
+        $ref: '#/definitions/v1.GeoData'
+    type: object
+  v1.HeatmapData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.HeatmapPoint'
+        type: array
     type: object
   v1.HeatmapResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.HeatmapPoint'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.HeatmapData'
+    type: object
+  v1.LinkData:
+    properties:
+      data:
+        $ref: '#/definitions/domain.Link'
+    type: object
+  v1.LinkListData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.Link'
+        type: array
     type: object
   v1.LinkResponse:
     properties:
       data:
-        properties:
-          data:
-            $ref: '#/definitions/domain.Link'
-        type: object
+        $ref: '#/definitions/v1.LinkData'
     type: object
   v1.LinksListResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.Link'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.LinkListData'
+    type: object
+  v1.LoginData:
+    properties:
+      token:
+        type: string
+      user:
+        $ref: '#/definitions/domain.User'
     type: object
   v1.LoginReq:
     properties:
@@ -271,36 +297,41 @@ definitions:
         type: string
       password:
         type: string
+    required:
+    - email
+    - password
     type: object
   v1.LoginResponse:
     properties:
-      token:
-        type: string
-      user:
-        $ref: '#/definitions/domain.User'
+      data:
+        $ref: '#/definitions/v1.LoginData'
+    type: object
+  v1.PlanListData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.Plan'
+        type: array
     type: object
   v1.PlansListResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.Plan'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.PlanListData'
     type: object
   v1.ProfileTreeResponse:
     properties:
       data:
         $ref: '#/definitions/domain.HierarchyNode'
     type: object
+  v1.QualityData:
+    properties:
+      data:
+        $ref: '#/definitions/domain.TrafficQuality'
+    type: object
   v1.QualityResponse:
     properties:
       data:
-        properties:
-          data:
-            $ref: '#/definitions/domain.TrafficQuality'
-        type: object
+        $ref: '#/definitions/v1.QualityData'
     type: object
   v1.RegisterReq:
     properties:
@@ -314,33 +345,49 @@ definitions:
     - email
     - password
     type: object
+  v1.SankeyData:
+    properties:
+      data:
+        $ref: '#/definitions/domain.SankeyData'
+    type: object
   v1.SankeyResponse:
     properties:
       data:
-        properties:
-          data:
-            $ref: '#/definitions/domain.SankeyData'
-        type: object
+        $ref: '#/definitions/v1.SankeyData'
+    type: object
+  v1.StatsData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.CategoryStat'
+        type: array
     type: object
   v1.StatsResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.CategoryStat'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.StatsData'
+    type: object
+  v1.StatusData:
+    properties:
+      status:
+        type: string
+    type: object
+  v1.StatusResponse:
+    properties:
+      data:
+        $ref: '#/definitions/v1.StatusData'
+    type: object
+  v1.StreamGraphData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.StackedPoint'
+        type: array
     type: object
   v1.StreamGraphResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.StackedPoint'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.StreamGraphData'
     type: object
   v1.UpdateUserPlanReq:
     properties:
@@ -352,15 +399,17 @@ definitions:
       is_active:
         type: boolean
     type: object
+  v1.UserListData:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.User'
+        type: array
+    type: object
   v1.UsersListResponse:
     properties:
       data:
-        properties:
-          data:
-            items:
-              $ref: '#/definitions/domain.User'
-            type: array
-        type: object
+        $ref: '#/definitions/v1.UserListData'
     type: object
 host: localhost:8080
 info:
@@ -452,9 +501,7 @@ paths:
         "200":
           description: 'Status: updated'
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/v1.StatusResponse'
         "400":
           description: Bad Request
           schema:
@@ -499,9 +546,7 @@ paths:
         "200":
           description: 'Status: updated'
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/v1.StatusResponse'
         "400":
           description: Bad Request
           schema:
@@ -883,7 +928,7 @@ paths:
         "201":
           description: Created user
           schema:
-            $ref: '#/definitions/domain.User'
+            $ref: '#/definitions/v1.CreatedUserResponse'
         "400":
           description: Bad Request
           schema:
